# WGPUFramework

./: CMakeLists.txt  README.md
Application/: AppWindow.cpp  AppWindow.h  WGPUApplication.cpp  WGPUApplication.h
Assets/: FPSCamera.h  Object3D.h
Assets/src/: Object3D.cpp
WGPUObjects/GraphicObjects/headers/: Buffer.h  BufferLayout.h  Shader.h  Texture.h
WGPUObjects/GraphicObjects/src/: Buffer.cpp  Shader.cpp
WGPUObjects/headers/: Adapter.h  BindGroup.h  BindGroupLayout.h  Device.h  RenderPass.h  RenderPipeline.h
WGPUObjects/src/: Adapter.cpp  Device.cpp  RenderPipeline.cpp
utilities/: Logging.cpp  Logging.h  Timer.h  Uncopyable.h
